--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-navbar></app-navbar>
+<div class="super-main-container">
 <router-outlet></router-outlet>
+</div>
+<app-messages></app-messages>
