--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,28 @@
-<nav class="navbar ">
-  <h1>Booking</h1>
-  <div>
-    <input type="text" placeholder="Richerca hotel"/>
-    <button>Richerca</button>
+<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+  <div class="container-fluid" >
+    <a class="navbar-brand" href="">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="login()">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="logout()">Logout</a>
+        </li>
+        <li class="nav-item" *ngIf="isOwner()">
+          <a class="nav-link " routerLink="admin">Admin</a>
+        </li>
+      </ul>
+      <form class="d-flex ms-auto " role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
   </div>
-  <ul>
-    <li><a routerLink="">Home></a></li>
-    <li><a (click)="login()">Login></a></li>
-    <li><a (click)="logout()">Loguot></a></li>
-    <li><a routerLink="admin">Admin></a></li>
-  </ul>
 </nav>
