--- a/src/app/pages/room-card/room-card.component.html
+++ b/src/app/pages/room-card/room-card.component.html
@@ -1,16 +1,16 @@
 <div
   class="card"
   style="width: 20rem;"
-  [class.border-success]="room.available"
+
   [class.border-danger]="room.status === 'Occupied'"
 >
-  <img height="200" [src]="room.image" class="card-img-top" alt="Room Image">
+  <img height="200" [src]="roomImg" class="card-img-top" alt="Room Image">
   <div class="card-body overflow-scroll">
     <h5 class="card-title fs-6 text-nowrap fw-bold mb-1">
       <i class="fa-solid fa-bed"></i>&nbsp;Room {{ room.roomNumber }}
     </h5>
     <h5 class="card-subtitle fs-6 text-secondary mb-1">
-      <i class="fa-solid fa-hotel"></i>&nbsp;{{ room.hotel.name }}
+      <i class="fa-solid fa-hotel"></i>&nbsp;{{ room.hotelId }}
     </h5>
     <h6 class="card-subtitle fs-6 text-secondary mb-1">
       <i class="fas fa-door-closed"></i>&nbsp;Type: {{ room.roomType.name }}
@@ -19,26 +19,26 @@
       <i class="fas fa-user"></i>&nbsp;Status: {{ room.status }}
     </h6>
     <h6 class="card-subtitle fs-6 text-secondary">
-      <i class="fas fa-bed"></i>&nbsp;Beds: {{ room.roomType.beds }}
+      <i class="fas fa-bed"></i>&nbsp;Beds: {{ room.roomType }}
     </h6>
     <hr>
-    <p class="card-text">{{ room.description }}</p>
+    <p class="card-text">{{ room.roomType.description }}</p>
   </div>
   <div class="card-footer d-flex gap-2 justify-content-between align-items-center">
     <div class="d-flex gap-2">
-      <app-rating [rating]="room.rating || 0"></app-rating>
-      <span class="fw-bold" *ngIf="room.rating || 0 > 0">
-        {{ room.rating }}
-      </span>
-    </div>
-    <div class="d-flex gap-2" *ngIf="!manage">
-      <i (click)="onShowDetails()" class="fas fa-circle-info text-primary"></i>
-      <i (click)="onBookRoom()" class="fas fa-calendar-check text-primary"></i>
-      <i (click)="onAddToWishlist()" class="fas fa-heart text-danger"></i>
-    </div>
-    <div class="d-flex gap-2" *ngIf="manage">
-      <i (click)="onEdit()" class="fas fa-edit text-success"></i>
-      <i (click)="onMarkAsUnavailable()" class="fas fa-archive text-danger"></i>
-    </div>
+      <!-- <app-rating [rating]="room.roomType.pricePerNight || 0"></app-rating>
+       <span class="fw-bold" *ngIf="room.roomType.capacity || 0 > 0">
+         {{ room.roomType.capacity }}
+       </span>
+     </div>
+     <div class="d-flex gap-2" *ngIf="!manage">
+       <i (click)="onShowDetails()" class="fas fa-circle-info text-primary"></i>
+       <i (click)="onBookRoom()" class="fas fa-calendar-check text-primary"></i>
+       <i (click)="onAddToWishlist()" class="fas fa-heart text-danger"></i>
+     </div>
+     <div class="d-flex gap-2" *ngIf="manage">
+       <i (click)="onEdit()" class="fas fa-edit text-success"></i>
+       <i (click)="onMarkAsUnavailable()" class="fas fa-archive text-danger"></i>
+     </div>--->
   </div>
 </div>
