--- a/src/app/owner-home/owner-home.component.html
+++ b/src/app/owner-home/owner-home.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="container mt-5">
   <h2>Hotel</h2>
   <app-add-hotel></app-add-hotel>
   <table class="table table-striped">
