--- a/src/app/pages/room-card/room-card.component.html
+++ b/src/app/pages/room-card/room-card.component.html
@@ -5,40 +5,40 @@
   [class.border-danger]="room.status === 'Occupied'"
 >
   <img height="200" [src]="roomImg" class="card-img-top" alt="Room Image">
-  <div class="card-body overflow-scroll">
+  <div class="card-body overflow-auto">
     <h5 class="card-title fs-6 text-nowrap fw-bold mb-1">
-      <i class="fa-solid fa-bed"></i>&nbsp;Room {{ room.roomNumber }}
+      <i class="bi bi-house"></i>&nbsp;Room {{ room.roomType.name }}
     </h5>
     <h5 class="card-subtitle fs-6 text-secondary mb-1">
-      <i class="fa-solid fa-hotel"></i>&nbsp;{{ room.hotelId }}
+      <i class="bi bi-building"></i>&nbsp;{{ room.hotelId }}
     </h5>
     <h6 class="card-subtitle fs-6 text-secondary mb-1">
-      <i class="fas fa-door-closed"></i>&nbsp;Type: {{ room.roomType.name }}
+      <i class="fas fa-door-closed"></i>&nbsp;Type: {{ room.roomType.description }}
     </h6>
     <h6 class="card-subtitle fs-6 text-secondary mb-1">
-      <i class="fas fa-user"></i>&nbsp;Status: {{ room.status }}
+      <i class="fas fa-user"></i>&nbsp;Prezzo: {{ room.roomType.pricePerNight }}
     </h6>
     <h6 class="card-subtitle fs-6 text-secondary">
-      <i class="fas fa-bed"></i>&nbsp;Beds: {{ room.roomType }}
+      <i class="fas fa-bed"></i>&nbsp;Beds: {{ room.roomType.capacity }}
     </h6>
     <hr>
     <p class="card-text">{{ room.roomType.description }}</p>
   </div>
   <div class="card-footer d-flex gap-2 justify-content-between align-items-center">
     <div class="d-flex gap-2">
-      <!-- <app-rating [rating]="room.roomType.pricePerNight || 0"></app-rating>
-       <span class="fw-bold" *ngIf="room.roomType.capacity || 0 > 0">
-         {{ room.roomType.capacity }}
-       </span>
-     </div>
-     <div class="d-flex gap-2" *ngIf="!manage">
-       <i (click)="onShowDetails()" class="fas fa-circle-info text-primary"></i>
-       <i (click)="onBookRoom()" class="fas fa-calendar-check text-primary"></i>
-       <i (click)="onAddToWishlist()" class="fas fa-heart text-danger"></i>
-     </div>
-     <div class="d-flex gap-2" *ngIf="manage">
-       <i (click)="onEdit()" class="fas fa-edit text-success"></i>
-       <i (click)="onMarkAsUnavailable()" class="fas fa-archive text-danger"></i>
-     </div>--->
+      <div class="d-flex gap-2">
+
+        <button class="btn btn-sm btn-primary" (click)="bookRoom()">
+          Prenota
+        </button>
+      </div>
+      <div class="d-flex gap-2" *ngIf="isAdmin()">
+        <button class="btn btn-sm btn-success" (click)="onEdit()">
+          <i class="bi bi-pencil-square"></i> Modifica
+        </button>
+        <button class="btn btn-sm btn-danger" (click)="onDelete()">
+          <i class="bi bi-trash"></i> Elimina
+        </button>
+      </div>
   </div>
-</div>
+  </div></div>
