--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,17 +5,15 @@
 <body>
 <div class="container mt-5">
   <div class="row">
-    <!-- Lista delle prenotazioni -->
-    <div class="col-md-8"> <!-- Definisci 8 colonne per la lista prenotazioni -->
+    <div class="col-md-8">
       <div class="card">
         <div class="card-header">
           <h4>Le tue Prenotazioni</h4>
         </div>
         <ul class="list-group list-group-flush">
-          <!-- Itera su tutte le prenotazioni usando *ngFor -->
           <li *ngFor="let reservation of bookings" class="list-group-item d-flex justify-content-between align-items-center">
             <div>
-              <strong>Hotel: {{ reservation.hotelName }} <br> Numero Stanza: {{reservation.roomId}} </strong><br>
+              <strong>Hotel: {{ reservation.hotelName }} <br> Numero Stanza: {{reservation.roomId}} Nome Stanza: {{reservation.roomName}} </strong><br>
               <mark>Prezzo totale: {{ reservation.totalPrice }}   </mark><br>
               <small>Check-in: {{ reservation.checkinDate }} - Check-out: {{ reservation.checkoutDate }}</small>
             </div>
@@ -27,8 +25,7 @@
       </div>
     </div>
 
-    <!-- Dati dell'utente -->
-    <div class="col-md-4"> <!-- Definisci 4 colonne per i dati dell'utente -->
+    <div class="col-md-4">
       <div class="card">
         <div class="card-header">
           <h4>Dati Utente</h4>
@@ -41,6 +38,58 @@
       </div>
     </div>
   </div>
+</div>
+<div class="d-flex justify-content-center mt-3">
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item">
+        <a
+          (click)="goToFirstPage()"
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Previous"
+          [class.disabled]="page === 0"
+        >
+          <i class="fa-solid fa-angles-left"></i>
+        </a>
+      </li>
+      <li class="page-item">
+        <a
+          (click)="goToPreviousPage()"
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Previous"
+          [class.disabled]="page === 0"
+        >
+          <i class="fa-solid fa-angle-left"></i>
+        </a>
+      </li>
+      <li
+        class="page-item"
+        *ngFor="let pageIndex of pages"
+      >
+        <a
+          (click)="goToPage(pageIndex)"
+          class="page-link"
+          [class.active]="page === pageIndex"
+          href="javascript:void(0)"
+        >
+          {{ pageIndex + 1 }}
+        </a>
+      </li>
+      <li class="page-item">
+        <a
+          (click)="goToNextPage()"
+          class="page-link"
+          href="javascript:void(0)"
+          aria-label="Next"
+        >
+          <i class="fa-solid fa-chevron-right"></i>
+        </a>
+      </li>
+
+    </ul>
+  </nav>
 </div>
 </body>
 
